--- a/css/model_selector.css
+++ b/css/model_selector.css
@@ -18,6 +18,8 @@
 	border-bottom: 0.2rem solid black;
 
 	box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+
+	overflow-y: auto;
 }
 
 #model_selector>* {
